--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -46,7 +46,9 @@
               <h6 class="text-center text-danger">Invalid Credentials</h6>
               {% endif %}
             <h5 class="card-title text-center">Sign In</h5>
-            <form class="form-signin" action="/login/" method="post"> {% csrf_token %}
+            <form class="form-signin" action="/login/" method="post"> 
+              {% csrf_token %}
+              
               {{ form.as_p }}
               <br>
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
